--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@babel/helper-compilation-targets": "^7.13.16",
         "@babel/node": "^7.14.2",
         "@babel/preset-env": "^7.14.2",
-        "@types/express": "^4.17.11"
+        "@types/express": "^4.17.11",
+        "eslint": "^7.26.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-plugin-react": "^7.23.2"
     }
 }
